--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Chess_App_Clone</string>
+    <string name="app_name">Chess_App</string>
 
     <string name="pion">In fata celorlaltor piese se afla opt pioni.
 Aceistia sunt considerati cei mai putini valorosi membrii ai armatei dar rolul lor in cursul partidei nu trebuie deloc neglijat.
